@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <otrs_config version="1.0" init="Application">
-    <CVS>$Id: Ticket.xml,v 1.490 2011/11/07 16:52:00 cr Exp $</CVS>
+    <CVS>$Id: Ticket.xml,v 1.491 2011/12/09 15:45:52 mg Exp $</CVS>
     <ConfigItem Name="Ticket::Hook" Required="1" Valid="1">
         <Description Translatable="1">The identifier for a ticket, e.g. Ticket#, Call#, MyTicket#. The default is Ticket#.</Description>
         <Group>Ticket</Group>
@@ -5731,18 +5731,6 @@ $QData{"Body"}
             </FrontendModuleReg>
         </Setting>
     </ConfigItem>
-    <ConfigItem Name="Frontend::Module###AgentTicketMailbox" Required="0" Valid="1">
-        <Description Translatable="1">Frontend module registration for the agent interface.</Description>
-        <Group>Ticket</Group>
-        <SubGroup>Frontend::Agent::ModuleRegistration</SubGroup>
-        <Setting>
-            <FrontendModuleReg>
-                <Description>compat module for AgentTicketMailbox to AgentTicketLockedView</Description>
-                <NavBarName>Ticket</NavBarName>
-                <Title></Title>
-            </FrontendModuleReg>
-        </Setting>
-    </ConfigItem>
     <ConfigItem Name="Frontend::Module###AgentTicketLockedView" Required="0" Valid="1">
         <Description Translatable="1">Frontend module registration for the agent interface.</Description>
         <Group>Ticket</Group>
@@ -6614,18 +6602,6 @@ $QData{"Body"}
                 <Description>Customer Ticket Print Module</Description>
                 <NavBarName></NavBarName>
                 <Title>Print</Title>
-            </FrontendModuleReg>
-        </Setting>
-    </ConfigItem>
-    <ConfigItem Name="CustomerFrontend::Module###CustomerZoom" Required="0" Valid="1">
-        <Description Translatable="1">Frontend module registration for the customer interface.</Description>
-        <Group>Ticket</Group>
-        <SubGroup>Frontend::Customer::ModuleRegistration</SubGroup>
-        <Setting>
-            <FrontendModuleReg>
-                <Description>compat mod</Description>
-                <NavBarName></NavBarName>
-                <Title></Title>
             </FrontendModuleReg>
         </Setting>
     </ConfigItem>
